# tella

./: .npmignore  Cargo.toml  README.md  package.json  postinstall.js
src/: api.rs  cli.rs  command_executor.rs  main.rs  settings.rs  ui.rs  updater.rs
