[package]
name = "tella"
version = "0.1.20"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crossterm = "0.27"
colored = "2.1"
clap = { version = "4.4", features = ["derive"] }
dotenv = "0.15"
regex = "1.10"
indicatif = "0.17"
dirs = "5.0"
